<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.ChangPasswordeFragment">
    
    <RelativeLayout
        android:id="@+id/header_myvehile"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/back_btn_width"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="?selectableItemBackground"
            android:padding="6dp"
            android:src="@drawable/ic_arrow_back_white_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_toLeftOf="@+id/tv_add_new_vehical"
            android:layout_toRightOf="@+id/iv_back"
            android:orientation="vertical">

            <TextView
                style="@style/TextBold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/iv_back_myvehicles"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="left|center"
                android:text="@string/password_change"
                android:textColor="@color/white"
                android:textSize="@dimen/h1" />

        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_myvehile">

        <LinearLayout
            android:id="@+id/ll_center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginLeft="@dimen/dp8"
                android:layout_marginTop="32dp"
                android:layout_marginRight="@dimen/dp8"
                android:layout_marginBottom="@dimen/dp8"
                >

                <EditText
                    android:id="@+id/et_old_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/old_pass"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_margin="@dimen/dp8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_margin="@dimen/dp8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/etConfPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/confirm_new_password"
                    android:inputType="textPassword"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSubmit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40"
                android:layout_gravity="right"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="?selectableItemBackground"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="?selectableItemBackground"
                    android:fontFamily="@font/montserrat_regular"
                    android:gravity="center"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/h2" />

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="56dp" />

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </ScrollView>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>