<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.ForgetPasswordFragment">

    <RelativeLayout
        android:id="@+id/header_myvehile"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/back_btn_width"
            android:layout_height="match_parent"
            android:padding="6dp"
            android:layout_centerVertical="true"
            android:background="?selectableItemBackground"
            android:src="@drawable/ic_arrow_back_white_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_toLeftOf="@+id/tv_add_new_vehical"
            android:layout_toRightOf="@+id/iv_back"
            android:orientation="vertical">

            <TextView
                style="@style/TextBold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/iv_back_myvehicles"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="left|center"
                android:text="@string/password_recovery"
                android:textColor="@color/white"
                android:textSize="@dimen/h1" />

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_margin="@dimen/dp16"
        android:background="@drawable/gradient_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_medium"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:singleLine="true"
            android:inputType="number"
            android:hint="@string/enter_your_mobile"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_marginTop="@dimen/dp32"
        android:layout_marginEnd="@dimen/dp16"
        android:layout_marginStart="@dimen/dp16"
        android:background="?selectableItemBackground"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="?selectableItemBackground"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/submit"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="32dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_myvehile"
        app:srcCompat="@drawable/forgetpassword_screnn" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>